tesaws_app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesaws_app-deployment
  labelsapp: tesaws_app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tesaws_app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tesaws_app
    spec:
      containers:
        - image: andrewptjio/tesaws_app:v1
          name: tesaws_app
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: tesaws_app-service
spec:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: tesaws_app
